tests/baselines/reference/YieldExpression10_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression10_es6.ts(2,11): error TS2304: Cannot find name 'foo'.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression10_es6.ts (1 errors) ====
    var v = { * foo() {
        yield(foo);
              ~~~
!!! error TS2304: Cannot find name 'foo'.
      }
    }
    